--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/AMTRevolution/.vs/
+/AMTRevolution/.vs/
+/AMTRevolution/bin/
+/AMTRevolution/bin/Debug/
+/AMTRevolution/obj/
+/AMTRevolution/obj/Debug/
+
