--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ Temporary Items
 /AMTRevolution/.vs/
 /AMTRevolution/bin/
 /AMTRevolution/bin/Debug/
+/AMTRevolution/bin/Release/
 /AMTRevolution/obj/
 /AMTRevolution/obj/Debug/
+/AMTRevolution/obj/Release/
+/AMTRevolution/.vs/AMTRevolution/
 
