--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,7 @@ Temporary Items
 /AMTRevolution/obj/Debug/
 /AMTRevolution/obj/Release/
 /AMTRevolution/.vs/AMTRevolution/
-
+.vs/
+/.vs/
+.vs/AMTRevolution/
+/.vs/AMTRevolution/
