--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,16 @@ Temporary Items
 /.vs/
 .vs/AMTRevolution/
 /.vs/AMTRevolution/
+/AppCore/.vs/
+/AppCore/.vs/
+/AppCore/bin/
+/AppCore/bin/Debug/
+/AppCore/bin/Release/
+/AppCore/obj/
+/AppCore/obj/Debug/
+/AppCore/obj/Release/
+/AppCore/.vs/AppCore/
+.vs/
+/.vs/
+.vs/AppCore/
+/.vs/AppCore/
