--- a/AMTRevolution/AMTRevolution.csproj
+++ b/AMTRevolution/AMTRevolution.csproj
@@ -78,6 +78,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GUI\ClosureCode.xaml.cs">
+      <DependentUpon>ClosureCode.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\MessageBox\MsgBoxYesNo.xaml.cs">
+      <DependentUpon>MsgBoxYesNo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="GUI\SplashScreen\Block.xaml.cs">
       <DependentUpon>Block.xaml</DependentUpon>
     </Compile>
@@ -89,6 +95,10 @@
       <DependentUpon>splashScreen.xaml</DependentUpon>
     </Compile>
     <Page Include="GUI\aboutWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GUI\ClosureCode.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -107,6 +117,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="GUI\MessageBox\MsgBoxYesNo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="GUI\SplashScreen\Block.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -182,6 +196,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="IconRes\WindowIcons\loading.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="IconRes\WindowIcons\detach-48.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
