--- a/AppCore/AppCore.csproj
+++ b/AppCore/AppCore.csproj
@@ -62,6 +62,8 @@
     <Compile Include="AppSettings\AppSettings.cs" />
     <Compile Include="LanguageSelection\language.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\closureCode.cs" />
+    <Compile Include="Tools\tools.cs" />
     <Compile Include="UserControl\GlobalProperties.cs" />
     <Compile Include="UserControl\SettingsFile.cs" />
     <Compile Include="UserControl\UserControl.cs" />
