--- a/AppCore/AppCore.csproj
+++ b/AppCore/AppCore.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,6 +60,8 @@
   <ItemGroup>
     <Compile Include="AppCore.cs" />
     <Compile Include="AppSettings\AppSettings.cs" />
+    <Compile Include="AppEvent\appEvent.cs" />
+    <Compile Include="FileWriter\userSettingsWriter.cs" />
     <Compile Include="LanguageSelection\language.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\closureCode.cs" />
@@ -66,11 +69,14 @@
     <Compile Include="UserControl\GlobalProperties.cs" />
     <Compile Include="UserControl\SettingsFile.cs" />
     <Compile Include="UserControl\UserControl.cs" />
+    <Compile Include="UserControl\UserSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="LanguageSelection\Languages\AMTRevLangPT.xml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="FileWriter" />
+    <Folder Include="AppEvent" />
     <Folder Include="PermissionControl\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
